@@ -1,5 +1,5 @@
 ###HEADLINE###
 ###LABEL_SHOWN_COMMENTS### ###SHOWN_COMMENTS### ###LABEL_TOPIC_REPLIES### ###TOPIC_REPLIES### ###LABEL_COMMENTS###
-###ANSWERBUTTON### ###LINKTOTOPIC###
+ ###LINKTOTOPIC### ###ANSWERBUTTON###
 ###COMMENTS###
-###LINKTOTOPIC###
+###LINKTOTOPIC### ###ANSWERBUTTON###
